# k24_r

./: CMakeLists.txt  README.md
src/: main.cpp
src/classes/: color_corpus.cpp  color_handler.cpp
src/classes/header/: color_corpus.h  color_handler.h  values.h
src/header/: bmp_edit.h  k24_r.h  pixel_operations.h  values.h
src/includes/: bmp_edit.cpp  k24_r.cpp  pixel_operations.cpp
